Spick/Spick/LB2_YAMLFiles_Yannick_Schönhaar/counter-frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: counter-frontend
          image: ghcr.io/yannick2005/counter-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
