Spick/Spick/LB2_YAMLFiles_Yannick_Schönhaar/counter-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
  labels: 
    app: counter-backend
spec: 
  type: NodePort
  ports: 
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector: 
    app: counter-backend
