Spick/Spick/LB2_YAMLFiles_Yannick_Schönhaar/counter-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-database
  labels: 
    app: counter-database
spec: 
  type: NodePort
  ports: 
    - name: 5432-tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector: 
    app: counter-database
