Spick/Spick/LB2_YAMLFiles_Yannick_Schönhaar/counter-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
  labels: 
    app: counter-frontend
spec: 
  type: NodePort
  selector: 
    app: counter-frontend
  ports: 
    - name: 3000-tcp
      protocol: TCP
      targetPort: 3000
      port: 3000
