Spick/Spick/LB2_YAMLFiles_Yannick_Schönhaar/counter-backend-router.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-backend
  labels: 
    app: counter-backend
spec: 
  port: 
    targetPort: 8080-tcp
  to: 
    kind: Service
    name: counter-backend
