Spick/Spick/LB2_YAMLFiles_Yannick_Schönhaar/counter-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-frontend
  name: counter-frontend
spec: 
  port:
    targetPort: 3000-tcp
  to: 
    kind: Service
    name: counter-frontend
